--- a/BBRemoteMobile/app/src/main/res/layout/activity_connection.xml
+++ b/BBRemoteMobile/app/src/main/res/layout/activity_connection.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.bbschool.bbremote.ConnectionActivity">
+    tools:context="com.example.bbschool.bbremotemobile.ConnectionActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
