--- a/BBRemoteMobile/app/src/main/res/menu/menu_connection.xml
+++ b/BBRemoteMobile/app/src/main/res/menu/menu_connection.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.bbschool.bbremote.ConnectionActivity">
+    tools:context="com.example.bbschool.bbremotemobile.ConnectionActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
