Menu done, fragment not loading yet

--- a/BBRemoteMobile/app/src/main/res/layout/content_input.xml
+++ b/BBRemoteMobile/app/src/main/res/layout/content_input.xml
@@ -1,9 +1,14 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment"
-    android:name="com.example.bbschool.bbremotemobile.KeyboardFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:layout="@layout/fragment_keyboard" />
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    tools:context="com.example.bbschool.bbremotemobile.InputActivity"
+    tools:showIn="@layout/activity_input">
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+</RelativeLayout>
