--- a/BBRemoteMobile/app/src/main/res/layout/fragment_keyboard.xml
+++ b/BBRemoteMobile/app/src/main/res/layout/fragment_keyboard.xml
@@ -6,17 +6,22 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".KeyboardFragment"
-    tools:showIn="@layout/activity_input">
+    tools:context=".KeyboardFragment">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!" />
 
     <com.example.bbschool.bbremotemobile.KeyboardViewFix
         android:id="@+id/keyboard_view"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
