--- a/BBRemoteMobile/app/src/main/res/layout/activity_input.xml
+++ b/BBRemoteMobile/app/src/main/res/layout/activity_input.xml
@@ -8,6 +8,7 @@
     tools:context="com.example.bbschool.bbremotemobile.InputActivity">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -21,6 +22,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_input" />
+    <include layout="@layout/content_input"/>
 
 </android.support.design.widget.CoordinatorLayout>
