--- a/BBRemoteMobile/app/src/main/res/layout/fragment_keyboard.xml
+++ b/BBRemoteMobile/app/src/main/res/layout/fragment_keyboard.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".KeyboardFragment">
+    tools:context="com.example.bbschool.bbremotemobile.KeyboardFragment">
 
     <com.example.bbschool.bbremotemobile.KeyboardViewFix
         android:id="@+id/keyboard_view"
