--- a/BBRemoteMobile/app/src/main/res/layout/content_connection.xml
+++ b/BBRemoteMobile/app/src/main/res/layout/content_connection.xml
@@ -1,39 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:id="@+id/connection_fragment"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.bbschool.bbremotemobile.ConnectionActivity"
     tools:showIn="@layout/activity_connection">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Paired Devices"
-        android:textStyle="bold"
-        android:textSize="22sp"/>
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:id="@+id/pairedDevicesView"
-        android:layout_weight="1"
-        android:background="#0f0" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Unpaired Devices"
-        android:textStyle="bold"
-        android:textSize="22sp"/>
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:id="@+id/unpairedDevicesView"
-        android:layout_weight="1"
-        android:background="#f00" />
-</LinearLayout>
+</RelativeLayout>
