ConnectionActivity mostly done. Still needs testing of valid connection and proper behaviour on connection lost. Need Windows side bluetooth to be fixed in order to test this.

--- a/BBRemoteMobile/app/src/main/res/layout/fragment_connection.xml
+++ b/BBRemoteMobile/app/src/main/res/layout/fragment_connection.xml
@@ -4,20 +4,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical|center_horizontal"
-    android:orientation="vertical"
-    android:weightSum="1">
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Devices in Range"
+        android:text="Paired Devices"
         android:textStyle="bold"
         android:textSize="22sp"/>
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:id="@+id/deviceList"
-        android:layout_weight="1" />
+        android:id="@+id/pairedDeviceList"
+        android:layout_weight="1"
+        android:background="#0f0"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Unpaired Devices"
+        android:textStyle="bold"
+        android:textSize="22sp"/>
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:id="@+id/unpairedDeviceList"
+        android:layout_weight="1"
+        android:background="#f00"/>
 
 </LinearLayout>
