--- a/BBRemoteMobile/app/src/main/res/layout/device_item.xml
+++ b/BBRemoteMobile/app/src/main/res/layout/device_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView android:id="@+id/deviceTitle"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:gravity="center_vertical"
+        android:gravity="center_horizontal"
         android:textSize="20sp"
         android:textColor="#000000"
         android:layout_marginTop="5dp"
@@ -15,7 +15,7 @@
     <TextView android:id="@+id/deviceAddress"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:gravity="center_vertical"
+        android:gravity="center_horizontal"
         android:textSize="20sp"
         android:textColor="#000000"
         android:layout_marginTop="5dp"
