--- a/BBRemoteMobile/app/src/main/res/layout/content_customize_gamepad.xml
+++ b/BBRemoteMobile/app/src/main/res/layout/content_customize_gamepad.xml
@@ -2,12 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:id="@+id/customize_gamepad_fragment"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.bbschool.bbremotemobile.CustomizeGamepadActivity"
     tools:showIn="@layout/activity_customize_gamepad">
