--- a/BBRemoteMobile/app/src/main/res/menu/customize_menu.xml
+++ b/BBRemoteMobile/app/src/main/res/menu/customize_menu.xml
@@ -7,4 +7,17 @@
         android:title="@string/action_add_input"
         android:icon="@drawable/ic_add_black_24dp"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/action_save_layout"
+        android:orderInCategory="6"
+        android:title="@string/action_save_layout"
+        android:icon="@drawable/ic_save_black_24dp"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_load_layout"
+        android:orderInCategory="7"
+        android:title="@string/action_load_layout"
+        android:icon="@drawable/ic_folder_open_black_24dp"
+        app:showAsAction="always" />
+
 </menu>
