Optical working better than before, still not very usable. Made screen stay on by default when in input mode.

--- a/BBRemoteMobile/app/src/main/res/layout/content_input.xml
+++ b/BBRemoteMobile/app/src/main/res/layout/content_input.xml
@@ -5,6 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:id="@+id/input_mode_fragment"
+    android:keepScreenOn="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.bbschool.bbremotemobile.InputActivity"
     tools:showIn="@layout/activity_input">
